kubernetes/cluster_roles/network-policies/deployed-applications/external-dns.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: external-dns-network-policy
  namespace: external-dns
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
spec:
  order: 80
  selector: app.kubernetes.io/instance == "external-dns"
  types:
    - Egress
  egress:
    - action: Allow # allow for connection to cloudflare api
      protocol: TCP
      destination: 
        nets:
          - 0.0.0.0/0
        ports: [443]
