kubernetes/cluster_roles/network-policies/deployed-applications/login-api.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: loginapi
  namespace: backend
spec:
  order: 80
  selector: "app.kubernetes.io/name == 'loginapi' || argocd.argoproj.io/instance == 'login-api'"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # allowing Frontend to connect to loginapi
      protocol: TCP
      source:
        namespaceSelector: kubernetes.io/metadata.name == "frontend"
        selector: all()
      destination:
        ports: [3000]
    - action: Allow # allowing nginx to talk to login api
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == "nginx"
        selector: all()
      destination:
        ports: [3000]
  egress:
    - action: Allow # login api -> postgres
      protocol: TCP
      destination:
        selector: cnpg.io/cluster == "postgres-db"
        ports: [5432]
