kubernetes/cluster_roles/network-policies/deployed-applications/nginx.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: nginx
spec: 
  order: 80
  selector: app.kubernetes.io/name == "ingress-nginx"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow  # exposing port 10254 for prometheus to scrape metrics
      protocol: TCP
      source: 
        namespaceSelector: kubernetes.io/metadata.name == "prometheus"
        selector: all()
      destination:
        ports: [10254]
    
    - action: Allow # allowing traffic from cloudflare tunnel to nginx
      protocol: TCP
      source: 
        selector: all()
        namespaceSelector: kubernetes.io/metadata.name == "cloudflare-tunnel"
      destination:
        ports: [80, 443]
  egress:
    - action: Allow # nginx -> frontend
      protocol: TCP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "frontend"
        selector: app.kubernetes.io/name == "frontend"
        ports: [3000]
