kubernetes/cluster_roles/network-policies/deployed-applications/postgres.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: backend
spec:
  order: 80
  selector: "cnpg.io/cluster == 'postgres-db' || app.kubernetes.io/instance == 'postgres'"

  types: 
    - Ingress
    - Egress

  ingress:
    - action: Allow # Allow Operator to talk cluster svc/pods
      protocol: TCP
      source:
        selector: app.kubernetes.io/name == "cloudnative-pg"
      destination:
        ports: [8000, 5432]
    - action: Allow # Allow prometheus to scrape operator metrics
      protocol: TCP
      source: 
        selector: all()
        namespaceSelector: kubernetes.io/metadata.name == "prometheus"
      destination:
        ports: [8080]
    - action: Allow # Allow login api -> postgres
      protocol: TCP
      source: 
        selector: "app.kubernetes.io/name == 'loginapi' || argocd.argoproj.io/instance == 'login-api'"
      destination: 
        ports: [5432]
  egress:
      - action: Allow # Allow Operator to talk cluster svc/pods
        protocol: TCP
        source:
          selector: app.kubernetes.io/name == "cloudnative-pg"
        destination:
          ports: [8000, 5432]
